--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "mongoose": "^8.10.0"
